force-app/main/default/objects/Thread_comments__c/Thread_comments__c.object-meta.xml
<CustomObject>
    <description>this custom object is used to store all comment(conversations) for a specific account in messaging project.</description>
    <label>Thread comments</label>
    <nameField>
        <label>Thread comments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Thread comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>