force-app/main/default/objects/Thread_comments__c/fields/Archive_Bookmark_Related_Id__c.field-meta.xml
<CustomField>
    <fullName>Archive_Bookmark_Related_Id__c</fullName>
    <label>Archive/Bookmark Related Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>