force-app/main/default/objects/Thread_comments__c/fields/CommentBody__c.field-meta.xml
<CustomField>
    <fullName>CommentBody__c</fullName>
    <label>CommentBody</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>