force-app/main/default/objects/Thread_comments__c/fields/Content_Document__c.field-meta.xml
<CustomField>
    <fullName>Content_Document__c</fullName>
    <description>This is used to store the content document id for any attachments in messaging project.</description>
    <label>Content Document</label>
    <length>20</length>
    <type>Text</type>
</CustomField>