force-app/main/default/objects/Thread_comments__c/fields/Content_Document_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_File_Name__c</fullName>
    <description>This is used to store the content document name for any attachment in messaging project.</description>
    <label>Content Document File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>