force-app/main/default/objects/Thread_comments__c/fields/isArchive__c.field-meta.xml
<CustomField>
    <fullName>isArchive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isArchive</label>
    <type>Checkbox</type>
</CustomField>