force-app/main/default/objects/Thread_comments__c/fields/isBookmark__c.field-meta.xml
<CustomField>
    <fullName>isBookmark__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isBookmark</label>
    <type>Checkbox</type>
</CustomField>