force-app/main/default/objects/Thread_comments__c/fields/PHI__c.field-meta.xml
<CustomField>
    <fullName>PHI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PHI</label>
    <type>Checkbox</type>
</CustomField>