force-app/main/default/objects/Thread_comments__c/fields/Practioner_Thread__c.field-meta.xml
<CustomField>
    <fullName>Practioner_Thread__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practioner Thread</label>
    <referenceTo>Practioner_Thread__c</referenceTo>
    <relationshipLabel>Thread comments</relationshipLabel>
    <relationshipName>Thread_comments</relationshipName>
    <type>Lookup</type>
</CustomField>